--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -662,6 +662,9 @@ p:last-child {
     h4:first-child {
         margin-top: 0 !important;
     }
+    img {
+        max-width: 100%;
+    }
 }
 .sidebar {
     h1:first-child,
