Profile picture fixes

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -414,6 +414,7 @@ footer .mdc-list .mdc-list-item a:hover {
     font-weight: 800;
     font-size: 0.9rem;
 }
+.photo-wee,
 .mdc-card__media-item {
     border-radius: 50%;
 }
