Post author page

--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -6,7 +6,11 @@
             {{else}}
             <h1 class="header-text">
                 <span class="header-text-banner">
+                    {{#if supplimentaryResponse.staff_profile.hits.hits.[0]}}
                     {{{supplimentaryResponse.staff_profile.hits.hits.[0]._source.rendered.scvo_header}}}
+                    {{else}}
+                    {{{supplimentaryResponse.author_profile.hits.hits.[0]._source.rendered.scvo_header}}}
+                    {{/if}}
                 </span>
             </h1>
             {{/if}}
@@ -45,7 +49,11 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                 <h3 class="author">{{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <div class="author_about">
+                    {{#if supplimentaryResponse.staff_profile.hits.hits.[0]}}
                     {{{supplimentaryResponse.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                    {{else}}
+                    {{{supplimentaryResponse.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                    {{/if}}
                 </div>
             </div>
         </div>
