Finishing touches on profile photos

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -374,6 +374,9 @@ footer .mdc-list .mdc-list-item a:hover {
         background: rgba(0,0,0,0.3);
         padding: 0 0 0.3rem 0;
         box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
+        .photo-wee {
+            vertical-align: text-bottom;
+        }
     }
 }
 .credit-union .splash-image img.header-text {
@@ -552,8 +555,10 @@ ul.breadcrumb {
         img {
             width: 1.6rem;
             border-radius: 50%;
-            margin-right: $spacing-unit/4;
-            vertical-align: bottom;
+            margin-right: $spacing-unit/2;
+            vertical-align: text-bottom;
+            float: left;
+            margin-top: -0.15rem;
         }
     }
     .post-info-categories {
