--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -594,6 +594,15 @@ ul.breadcrumb {
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
     padding: 0 0 $spacing-unit;
 }
+.full .page-info {
+    font-size: 0.9rem;
+    color: #999;
+    .page-info-updated {
+        margin: $spacing-unit*1.5 0 $spacing-unit/2;
+        border-top: #999;
+        padding: $spacing-unit 0 0;
+    }
+}
 
 blockquote {
     float: right;
@@ -694,7 +703,7 @@ p:last-child {
         margin: $spacing-unit/2 0 $spacing-unit;
     }
 }
-.post-sidebar h3 {
+.post-sidebar h3:first-child {
     margin: $spacing-unit*1.5 0 $spacing-unit/4 !important;
 }
 
