--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -599,7 +599,7 @@ ul.breadcrumb {
     color: #999;
     .page-info-updated {
         margin: $spacing-unit*1.5 0 $spacing-unit/2;
-        border-top: 1px solid #999;
+        border-top: 1px solid #ccc;
         padding: $spacing-unit 0 0;
     }
 }
