--- a/functions/test-db/json2/scvo/templates/list-posts.hbs
+++ b/functions/test-db/json2/scvo/templates/list-posts.hbs
@@ -8,8 +8,7 @@
                 <span class="header-text-banner">
                     {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}
                     {{#compare this "===" (lastItem (split ../params.path '_'))}}
-                    Category title ID: {{@index}}
-                    {{../primaryResponse.hits.hits.[0]._source.categories.[(@index)]}}
+                    {{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}
                     {{/compare}}
                     {{/each}}
                 </span>
