Fixed Event search

--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -7,7 +7,7 @@
         <div class="mdc-card">
             <section class="mdc-card__primary">
                 <h2 class="mdc-card__title mdc-card__title--large">Find Events</h2>
-                <form [searchroute]="'events'">
+                <form [searchroute]="'event-search'">
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             <div class="mdc-layout-grid__cell">
