--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -12,19 +12,19 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell">
                     <h2>Latest blog posts</h2>
-                    {{#each supplimentaryResponse.blogs_latest.hits.hits}}
+                    {{#each supplimentaryResponses.blogs_latest.hits.hits}}
                     {{{_source.rendered.gist}}}
                     {{/each}}
                 </div>
                 <div class="mdc-layout-grid__cell">
                     <h2>Top <a href="http://goodmoves.com"><strong>good</strong>moves</a> jobs</h2>
-                    {{#each supplimentaryResponse.goodmoves_latest.hits.hits}}
+                    {{#each supplimentaryResponses.goodmoves_latest.hits.hits}}
                     {{{_source.rendered.gist}}}
                     {{/each}}
                 </div>
                 <div class="mdc-layout-grid__cell">
                     <h2>Latest <a href="http://thirdforcenews.org.uk">TFN</a> news</h2>
-                    {{#each supplimentaryResponse.tfn_latest.hits.hits}}
+                    {{#each supplimentaryResponses.tfn_latest.hits.hits}}
                     {{{_source.rendered.gist}}}
                     {{/each}}
                 </div>
