--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image splash-image-scvo-cms-author{{#if primaryResponse.hits.hits.[0]._source.header_background}} splash-image-background{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.header_background_gradient}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{else}}{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{primaryResponse.hits.hits.[0]._source.header_background}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');">
+<div class="splash-image splash-image-scvo-cms-author{{#if primaryResponse.hits.hits.[0]._source.header_background}} splash-image-background{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.header_background_gradient}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{else}}{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{primaryResponse.hits.hits.[0]._source.header_background}}{{else}}{{#if supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
@@ -6,10 +6,10 @@
             {{else}}
             <h1 class="header-text">
                 <span class="header-text-banner">
-                    {{#if supplimentaryResponse.staff_profile.hits.hits.[0]}}
-                    {{{supplimentaryResponse.staff_profile.hits.hits.[0]._source.rendered.scvo_header}}}
+                    {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
+                    {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_header}}}
                     {{else}}
-                    {{{supplimentaryResponse.author_profile.hits.hits.[0]._source.rendered.scvo_header}}}
+                    {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_header}}}
                     {{/if}}
                 </span>
             </h1>
@@ -49,10 +49,10 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                 <h3 class="author">{{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <div class="author_about">
-                    {{#if supplimentaryResponse.staff_profile.hits.hits.[0]}}
-                    {{{supplimentaryResponse.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                    {{#if supplimentaryResponses.staff_profile.hits.hits.[0]}}
+                    {{{supplimentaryResponses.staff_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                     {{else}}
-                    {{{supplimentaryResponse.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
+                    {{{supplimentaryResponses.author_profile.hits.hits.[0]._source.rendered.scvo_profile}}}
                     {{/if}}
                 </div>
             </div>
