--- a/functions/test-db/json2/scvo/templates/staff-list.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-list.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}{{#if primaryResponse.hits.hits.[0]._source.header_background}} splash-image-background{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.header_background_gradient}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{else}}{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{primaryResponse.hits.hits.[0]._source.header_background}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');">
+<div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}{{#if primaryResponse.hits.hits.[0]._source.header_background}} splash-image-background{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.header_background_gradient}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{else}}{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{primaryResponse.hits.hits.[0]._source.header_background}}{{else}}{{#if supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
@@ -27,7 +27,7 @@
                     <div class="mdc-form-field">
                         <select class="mdc-select" role="listbox" id="office" name="office">
                             <option value="" {{#if params.query.office}}{{else}}selected{{/if}}>All offices</option>
-                            {{#each supplimentaryResponse.offices.aggregations.offices.buckets}}
+                            {{#each supplimentaryResponses.offices.aggregations.offices.buckets}}
                             <option value="{{slugify key}}" {{#compare ../params.query.office "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                             {{/each}}
                         </select>
@@ -35,7 +35,7 @@
                     <div class="mdc-form-field">
                         <select class="mdc-select" role="listbox" id="directorate" name="directorate">
                             <option value="" {{#if params.query.directorate}}{{else}}selected{{/if}}>All directorates</option>
-                            {{#each supplimentaryResponse.offices.aggregations.directorates.buckets}}
+                            {{#each supplimentaryResponses.offices.aggregations.directorates.buckets}}
                             <option value="{{slugify key}}" {{#compare ../params.query.directorate "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                             {{/each}}
                         </select>
@@ -43,7 +43,7 @@
                     <div class="mdc-form-field">
                         <select class="mdc-select" role="listbox" id="department" name="department">
                             <option value="" {{#if params.query.department}}{{else}}selected{{/if}}>All departments</option>
-                            {{#each supplimentaryResponse.offices.aggregations.departments.buckets}}
+                            {{#each supplimentaryResponses.offices.aggregations.departments.buckets}}
                             <option value="{{slugify key}}" {{#compare ../params.query.department "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                             {{/each}}
                         </select>
@@ -78,4 +78,3 @@
         </div>
     </div>
 </div>
-
