Added campaign routes

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -596,10 +596,10 @@ ul.breadcrumb {
 }
 .full .page-info {
     font-size: 0.9rem;
-    color: #999;
+    color: #777;
     .page-info-updated {
         margin: $spacing-unit*1.5 0 $spacing-unit/2;
-        border-top: 1px solid #ccc;
+        border-top: 1px solid #aaa;
         padding: $spacing-unit 0 0;
     }
 }
