Add full width template

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -56,9 +56,10 @@ $spacing-unit: 1rem;
     --mdc-theme-primary-light: #C2185B; // Pink 700
     --mdc-theme-primary-dark: #880E4F; // Pink 900
 }
-.search-result.scvo-cms-post,
-.gist.scvo-cms-post,
 .search-result.scvo-document,
+.search-result.scvo-cms-post,
+.list.scvo-cms-post,
+.gist.scvo-cms-post,
 .post,
 .policy-research {
     --mdc-theme-primary: #D84315; // Deep Orange 800
@@ -387,6 +388,7 @@ footer .mdc-list .mdc-list-item a:hover {
 .credit-union .splash-image img.header-text {
     max-height: 6rem;
 }
+.blogs .page-sidebar .page-info,
 .press-media .sidebar h3.blogs {
     display: none;
 }
