--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -16,6 +16,7 @@ $spacing-unit: 1rem;
     --mdc-layout-grid-margin-desktop: 0;
     --mdc-layout-grid-margin-tablet: 0;
 }
+.funding,
 .running-a-charity,
 .setting-up-a-charity,
 .running-your-organisation {
@@ -36,7 +37,6 @@ $spacing-unit: 1rem;
     --mdc-theme-primary-light: #388E3C; // Green 700
     --mdc-theme-primary-dark: #1B5E20; // Green 900
 }
-.search-result.funding-scotland-fund,
 .services {
     --mdc-theme-primary: #1565C0; // Blue 800
     --mdc-theme-primary-fade: rgba(21, 101, 192, 0.5);
@@ -60,6 +60,7 @@ $spacing-unit: 1rem;
 .search-result.scvo-cms-post,
 .list.scvo-cms-post,
 .gist.scvo-cms-post,
+.blogs,
 .post,
 .policy-research {
     --mdc-theme-primary: #D84315; // Deep Orange 800
@@ -85,6 +86,13 @@ $spacing-unit: 1rem;
     --mdc-theme-primary-fade: #3b9db1;
     --mdc-theme-primary-light: #3b9db1;
     --mdc-theme-primary-dark: #3b9db1;
+}
+.search-result.funding-scotland-fund,
+.services.funding-scotland {
+    --mdc-theme-primary: #6FB744;
+    --mdc-theme-primary-fade: #6FB744;
+    --mdc-theme-primary-light: #6FB744;
+    --mdc-theme-primary-dark: #6FB744;
 }
 
 html {
