--- a/functions/test-db/json2/scvo/templates/credit-union.hbs
+++ b/functions/test-db/json2/scvo/templates/credit-union.hbs
@@ -41,8 +41,8 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                <nav id="about-tab-bar" class="mdc-tab-bar">
-                    {{#each credit_union.about}}
+                <nav id="credit-union-tab-bar" class="mdc-tab-bar">
+                    {{#each menus.credit_union}}
                     <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
                     {{/each}}
                 </nav>
