Initial setup of GoodHQ demo

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -228,14 +228,14 @@ footer .mdc-list .mdc-list-item a:hover {
     }
     .mdc-toolbar__section.toolbar-menu,
     .mdc-toolbar__row.toolbar-nav {
-        height: $spacing-unit*2;
+        height: $spacing-unit*2.5;
     }
     .toolbar-nav {
         background-color: var(--mdc-theme-primary-dark);
-        min-height: $spacing-unit*2;
+        min-height: $spacing-unit*2.5;
     }
     .mdc-toolbar__row {
-        min-height: $spacing-unit*2;
+        min-height: $spacing-unit*2.5;
         .container-fluid {
             display: -webkit-box;
             display: -ms-flexbox;
@@ -279,7 +279,7 @@ footer .mdc-list .mdc-list-item a:hover {
             .mdc-tab-bar {
                 overflow: hidden;
                 text-transform: none;
-                height: $spacing-unit*2;
+                height: $spacing-unit*2.5;
                 margin: 0;
                 .mdc-tab {
                     color: rgba(255, 255, 255, 0.95);
@@ -340,7 +340,7 @@ footer .mdc-list .mdc-list-item a:hover {
     }
 }
 .mdc-toolbar-fixed-adjust {
-    padding-top: $spacing-unit*9;
+    padding: $spacing-unit*9.5 0 $spacing-unit*1.5;
     margin: 0;
 }
 .mdc-temporary-drawer {
