--- a/functions/test-db/json2/goodhq/templates/goodhq.hbs
+++ b/functions/test-db/json2/goodhq/templates/goodhq.hbs
@@ -43,16 +43,13 @@
                                 <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                             <span class="mdc-toolbar__title catalog-title">
-                                <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                    <img src="assets/images/scvo-logo.png" />
+                                <a href="/" class="brand-logo" title="Good HQ">
                                 </a>
                             </span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
                             <nav id="upper-tab-bar" class="mdc-tab-bar">
-                                {{#each menus.upper}}
-                                <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
-                                {{/each}}
+                                <a class="mdc-tab" href=""></a>
                             </nav>
                             <form [searchroute]="'main-search'" class="mdc-form-field mdc-form-field--align-end">
                                 <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
@@ -65,42 +62,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="mdc-toolbar__row toolbar-nav">
-                    <div class="container-fluid">
-                        <section class="mdc-toolbar__section mdc-toolbar__section--align-start toolbar-menu">
-                            <nav id="main-tab-bar" class="mdc-tab-bar">
-                                {{#each menus.main}}
-                                <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
-                                {{/each}}
-                            </nav>
-                        </section>
-                    </div>
-                </div>
             </header>
-
-            <aside class="mdc-temporary-drawer" id="menu_draw" data-mdc-auto-init="MDCTemporaryDrawer">
-                <nav class="mdc-temporary-drawer__drawer">
-                    <header class="mdc-temporary-drawer__header">
-                        <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
-                            <img src="assets/images/scvo-logo.png" />
-                        </div>
-                    </header>
-                    <nav class="mdc-temporary-drawer__content mdc-list-group">
-                        <div id="icon-with-text-demo" class="mdc-list">
-                            {{#each menus.main}}
-                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">
-                                {{{label}}}
-                            </a>
-                            {{/each}}
-                            {{#each menus.upper}}
-                            <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">
-                                {{{label}}}
-                            </a>
-                            {{/each}}
-                        </div>
-                    </nav>
-                </nav>
-            </aside>
 
             <main class="mdc-toolbar-fixed-adjust">
                 <div class="page-content">
@@ -125,32 +87,25 @@
                                     </div>
                                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
                                         <ul class="mdc-list">
-                                            {{#each menus.footer}}
-                                            <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
-                                            {{/each}}
+                                            <li class="mdc-list-item"><a href=""></a></li>
                                         </ul>
                                     </div>
                                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
                                         <ul class="mdc-list">
                                             <li class="mdc-list-item">
                                                 <a href="mailto:enquiries@scvo.org.uk">
-
-                                                    enquiries@scvo.org.uk
                                                 </a>
                                             </li>
                                             <li class="mdc-list-item">
                                                 <a href="tel:+441314748000">
-                                                    0131 474 8000
                                                 </a>
                                             </li>
                                             <li class="mdc-list-item">
                                                 <a href="https://www.facebook.com/SCVO1939">
-                                                    Facebook
                                                 </a>
                                             </li>
                                             <li class="mdc-list-item">
                                                 <a href="https://twitter.com/scvotweet">
-                                                    Twitter
                                                 </a>
                                             </li>
                                         </ul>
