--- a/functions/test-db/json2/goodhq/templates/goodhq.hbs
+++ b/functions/test-db/json2/goodhq/templates/goodhq.hbs
@@ -44,14 +44,17 @@
                             </button>
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="Good HQ">
+                                    <img src="assets/images/goodhq-logo.png" />
                                 </a>
                             </span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
                             <nav id="upper-tab-bar" class="mdc-tab-bar">
-                                <a class="mdc-tab" href=""></a>
+                                <a class="mdc-tab" href="/signin">Sign in</a>
+                                <a class="mdc-tab" href="/signup">Sign up</a>
+                                <a class="mdc-tab" href="/about">About</a>
                             </nav>
-                            <form [searchroute]="'main-search'" class="mdc-form-field mdc-form-field--align-end">
+                            <form [searchroute]="'search'" class="mdc-form-field mdc-form-field--align-end">
                                 <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
                                     <input type="text" class="mdc-textfield__input white-text searchRoute" placeholder="Search" id="q" name="q">
                                 </div>
@@ -77,8 +80,8 @@
                             <div class="mdc-layout-grid">
                                 <div class="mdc-layout-grid__inner">
                                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet">
-                                        <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                            <img src="assets/images/scvo-logo.png" />
+                                        <a href="/" class="brand-logo" title="Good HQ">
+                                            <img src="assets/images/goodhq-logo.png" />
                                         </a>
                                         <p>Good HQ</p>
                                     </div>
